# seabay

./: .editorconfig  .gitignore  .opencore-manifest.yml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  README.zh-CN.md  REGION_POLICY.md  ROADMAP.md  SECURITY.md  TRADEMARK_NOTICE.md  VISION.md  docker-compose.prod.yml  docker-compose.yml  sbom.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
archive/: README.md
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema_v1_5.py  002_performance_indexes.py  003_metrics_and_idempotency.py  004_circle_enhancements.py  005_spec_alignment_fixes.py  006_api_key_prefix_index.py  007_schema_alignment.py  008_installations_table.py  009_audit_report_fixes.py  010_phase_b_c_tables.py  011_add_publication_ref_audience_pref.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  agents.py  circles.py  events.py  health.py  intents.py  match.py  organizations.py  people.py  public.py  publications.py  relationships.py  reports.py  tasks.py  verifications.py
backend/app/cards/: match_result.py  receipt.py  task_approval.py
backend/app/core/: exceptions.py  id_generator.py  json_logging.py  middleware.py  rate_limiter.py  security.py
backend/app/models/: __init__.py  agent.py  audit_log.py  circle.py  dlp_scan_log.py  enums.py  installation.py  intent.py  interaction.py  introduction.py  metrics.py  organization.py  publication.py  rate_limit_budget.py  relationship.py  report.py  task.py  task_message.py  verification.py
backend/app/schemas/: agent.py  circle.py  common.py  event.py  intent.py  match.py  publication.py  relationship.py  report.py  stats.py  task.py  verification.py  webhook.py
backend/app/services/: __init__.py  activity_service.py  agent_service.py  budget_service.py  circle_service.py  contact_policy_service.py  dlp_service.py  idempotency_service.py  intent_service.py  introduction_service.py  match_service.py  metrics_service.py  moderation_service.py  new_account_service.py  notification_service.py  org_service.py  passport_service.py  people_service.py  publication_service.py  relationship_service.py  report_service.py  search_service.py  shadow_throttle_service.py  task_message_service.py  task_service.py  trust_service.py  verification_service.py  visibility_service.py  webhook_config_service.py  webhook_service.py
backend/app/workers/: __init__.py  metrics_aggregator.py  payload_cleaner.py  status_decay.py  strength_deriver.py  task_delivery.py  ttl_checker.py
backend/tests/: conftest.py  test_activity.py  test_adapters.py  test_admin.py  test_agents.py  test_budget_rules.py  test_cards.py  test_circle_service.py  test_circles.py  test_config.py  test_contact_policy.py  test_dlp.py  test_enums.py  test_events_api.py  test_exceptions.py  test_health.py  test_id_generator.py  test_idempotency.py  test_intent_matching.py  test_intents_api.py  test_introduction.py  test_json_logging.py  test_metrics.py  test_moderation.py  test_new_account.py  test_notification.py  test_organizations_api.py  test_passport.py  test_people_api.py  test_public_api.py  test_publications_api.py  test_rate_limiter.py  test_relationships_api.py  test_reports_api.py  test_search.py  test_security.py  test_services.py  test_shadow_throttle.py  test_skill.py  test_state_machine.py  (+9 more)
backend/tests/integration/: __init__.py  conftest.py  test_agent_lifecycle.py  test_relationship_lifecycle.py
cli/: pyproject.toml
cli/seabay/: cli.py
docs/: ACCESS-PLANES.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ERROR-CODES.md  FAQ.md  GOVERNANCE.md  REGION_POLICY.md  SECURITY.md  SUPPORT.md  TRADEMARK_NOTICE.md
examples/: a2a_integration.py  circle_workflow.py  demo_agent.py  mcp_agent.py  trust_verification.py  webhook_setup.py
guidance/: AGENTS.md  CLAUDE.md  GEMINI.md
helm-lite/: Chart.yaml  (+1 more)
sdk-py/: README.md  pyproject.toml
sdk-py/seabay/: __init__.py  client.py  types.py
sdk-py/tests/: test_client.py
shell-cli/: pyproject.toml
shell-cli/seabay_shell/: __init__.py  chat.py  commands.py  config.py  history.py  llm.py  main.py  renderer.py
(+146 files in other folders)
