[project]
name = "seabay-backend"
version = "0.1.0"
description = "Seabay — Networked collaboration ability layer for AI Agents"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Avan Mo" },
]
keywords = ["ai", "agents", "collaboration", "a2a", "mcp", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "bcrypt>=4.2.0",
    "nanoid>=2.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "aiosqlite>=0.20.0",
]

[project.urls]
Homepage = "https://seabay.ai"
Repository = "https://github.com/seapex-ai/seabay"
Documentation = "https://github.com/seapex-ai/seabay/tree/main/docs"
Issues = "https://github.com/seapex-ai/seabay/issues"
Changelog = "https://github.com/seapex-ai/seabay/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "integration: marks tests as integration tests (require PostgreSQL)",
]
