[project]
name = "seabay"
version = "0.1.1"
description = "Python SDK for Seabay — networked collaboration for AI Agents"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Avan Mo" }]
keywords = ["ai", "agents", "seabay", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[project.urls]
Homepage = "https://seabay.ai"
Repository = "https://github.com/seapex-ai/seabay"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
