[project]
name = "seabay-shell"
version = "0.1.0"
description = "Seabay Shell CLI — natural language chat interface for Seabay Agent platform"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Avan Mo" }]
keywords = ["ai", "agents", "seabay", "shell", "chat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.28.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0.0"]

[project.urls]
Homepage = "https://seabay.ai"
Repository = "https://github.com/seapex-ai/seabay"

[project.scripts]
seabay-shell = "seabay_shell.main:main"

[tool.hatch.build.targets.wheel]
packages = ["seabay_shell"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
